style.css
:root{
--Dark-Violet: hsl(256, 26%, 20%);
--Grayish-Blue: hsl(216, 30%, 68%);
--Very-Dark-Violet: hsl(270, 9%, 17%);
--Dark-Grayish-Violet: hsl(273, 4%, 51%);
--Very-Light-Gray: hsl(0, 0%, 98%);

--font-400: 400;
--font-700: 700;

--hamburger-menu-item-width: 1.7rem;
--hamburger-menu-item-height: 0.2rem;
--letter-space: 0.2rem;

}

*,*::before, *::after{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

a{
    text-decoration: none;
}

img{
    display: block;
}

ul{
    list-style-type: none;
}

html{
    font-size: 62.5%;
}

body{
    font-size: 1.6rem;
    font-family: 'Karla', sans-serif;
    overflow-x: hidden;
}

.flex{
    display: flex;
}

.flex__align{
    align-items: center;
}

.flex__justify{
    justify-content: center;
}

.flex__direction{
    flex-direction: column;
}

.inner__container{
    max-width: 115rem;
    width: 100%;
    margin: 0 auto;
}

.ver__padd{
    padding-left: 4rem;
    padding-right: 4rem;
}

.btn{
    cursor: pointer;
    border: 0.2rem solid white;
    padding: 0.8rem 2.5rem;
    background-color: transparent;
    font-family: inherit;
    font-size: inherit;
    text-transform: uppercase;
    font-weight: var(--font-700);
    color: white;
    transition: all 0.3s ease-in-out;
    letter-spacing: var(--letter-space);
}


/* === start of header === */

.header{
    background-color: white;
    position: fixed;
    width: 100%;
    height: 8rem;
    top: 0;
    z-index: 2;
}

.logo_wrapper{
    margin-right: auto;
}


.header__nav__list .header__nav__link{
       display: inline-block;
       margin: 1.5rem;
       color: var(--Dark-Grayish-Violet);
       letter-spacing: var(--letter-space);
       text-transform: uppercase;
       transition: all 0.3s ease-in-out;
}  

.header__nav__list .header__nav__link:hover{
    color: var(--Very-Dark-Violet);
}

.header__cta__btn{
      border-color: var(--Very-Dark-Violet);
      color: var(--Very-Dark-Violet);
      margin-left: 1.5rem;
}

.header__cta__btn:hover{
    background-color: var(--Very-Dark-Violet);
    color: white;
}

.hamburger__menu{
    padding: 0.6rem 0.5rem;
    align-items: center; 
    border: 0.2rem solid var(--Very-Dark-Violet);
    cursor: pointer;
    display: none;
}

.menu__line{
    width: var(--hamburger-menu-item-width);
    height: var(--hamburger-menu-item-height);
    background-color: var(--Very-Dark-Violet);
    transition: all 0.5s ease-in-out;
}

.menu__line:not(:last-child){
    margin-bottom: 0.3rem;
}


.open__hambuger .line-1{
    transform: rotate(-45deg) translate(-0.35rem, 0.3rem);
}

.open__hambuger .line-2{
      opacity: 0;
}

.open__hambuger .line-3{
    transform: rotate(45deg) translate(-0.35rem, -0.4rem);
}

.display__ham{
    animation: fade-in 0.3s ease-in-out forwards;
}

.hide__ham{
    animation: fade-out 0.3s ease-in-out forwards;

}

@keyframes fade-in {
    from {
        visibility: hidden;
        opacity: 0;
    }

    1%{
        visibility: visible;
        opacity: 0;
    }
    to {
        visibility: visible;
        opacity: 1;
    }
  }


@keyframes fade-out {
    from {
        visibility: visible;
        opacity: 1;
    }

    1%{
        visibility: visible;
        opacity: 1;
    }
    to {
        visibility: hidden;
        opacity: 0;
    }
  }


/* === end of header === */


/* === start of hero === */

.hero{
    background-color: var(--Dark-Violet);
    margin-top: 8rem;
    color: white;
    position: relative;
    /* overflow-x: hidden; */
}

.hero__wrapper{
    height: 55rem;
}



.hero__divider{
    width: 15rem;
    height: 0.1rem;
    background-color: var(--Very-Light-Gray);
    margin-bottom: 4rem;
}

.hero__text::before{
    content: url('images/bg-pattern-intro-left-desktop.svg');
    position: absolute;
    bottom: -34rem;
    left: 0rem;
    z-index: -1;
}

.hero__text{
    align-items: flex-start;
    flex-basis: 100%;
    padding-top: 10rem;
    padding-bottom: 10rem;
    z-index: 1;
}

.hero__text::after{
    content: url('images/bg-pattern-intro-right-desktop.svg');
    position: absolute;
    right: 0rem;
    top: -8rem;
}

.heading{
    font-family: 'DM Serif Display', serif;
    font-weight: var(--font-400);
}

.hero__text h1{
    /* font-size: 7.5rem; */
    font-size: clamp(4rem, 4.5vw, 6.5rem); 
    line-height: 1;
}

.hero__text p{
         margin: 3rem 0;
         line-height: 1.6;
}

.cta__btn:hover{
    background-color: white;
    color: var(--Very-Dark-Violet);
}


.hero__img__wrapper{
    flex-basis: 100%;
    background-image: url('images/image-intro-desktop.jpg');
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    height: calc(50rem + 10vw);
    max-height: 65rem;
    min-height: calc(50rem - 10vw);
    margin: 10rem 4rem;
}

.hero__img__wrapper img{
    display: block;
    max-width: 100%;
}

/* === end of hero === */



@media screen and (max-width: 1200px) {
  
}

 @media screen and (max-width: 1024px) {


   }
   
 @media screen and (max-width: 768px) {
 

/* === start of header === */

     .ver__padd{
         padding-left: 2rem;
         padding-right: 2rem;
     }

   .header_nav{
        visibility: hidden;
        opacity: 0;
        position: absolute;
        top: 8rem;
        left: 0;
        right: 0;
        height: 100vh;
        /* height:  calc(100vh - 10rem); */
        background: url('images/bg-pattern-mobile-nav.svg') var(--Very-Dark-Violet);
        background-repeat: no-repeat;
        background-position: bottom right;
        background-size: contain;
    }

    .header__nav__list{
        flex-direction: column;
        padding-top: 3rem;
    }

    .header__nav__list .header__nav__link{
        color: var(--Very-Light-Gray);
        font-size: 1.8rem;
        position: relative;
    }

    .header__nav__link::after{
        content: '';
        position: absolute;
        display: block;
        width: 0;
        height: 0.1rem;
        background-color: var(--Very-Light-Gray);
        bottom: -0.2rem;
        transition: width 0.3s ease-in-out;
    }

    .header__nav__link:hover::after{
           width: 100%;
    }

    .header__nav__list .header__nav__link:hover{
        color: var(--Very-Light-Gray);
    }
    
    .header__cta__btn{
        color: var(--Very-Light-Gray);
        border-color: var(--Very-Light-Gray);
        margin-left: 0rem;
        margin-top: 1.5rem;
        font-size: 1.8rem;
        /* padding: 1rem 8.5rem; */
    }

    .header__cta__btn:hover{
        background-color: white;
        color: var(--Very-Dark-Violet);
    }

    .hamburger__menu{
        display: block;
    }

    
  /* === end of header === */

  /* === start of hero === */
  .hero__wrapper{
    flex-direction: column;
    height: auto;
    text-align: center;
}

.hero__img__wrapper{
    order: -1;
    background-image: url('images/image-intro-mobile.jpg');
    height: 100%;
    margin: 0;
}

.hero__divider{
    display: none;
}

.hero__text{
    position: relative;
}

.hero__text::before{
    content: url('images/bg-pattern-intro-left-mobile.svg');
    position: absolute;
    top: 0rem;
}


.hero__text::after{
    content: url('images/bg-pattern-intro-right-mobile.svg');
    position: absolute;
    top: 73%;
    bottom: 0;
    z-index: -1;
}

/* === end of hero === */


     }



 @media screen and (max-width: 550px) {
     
    }


 @media screen and (max-width: 480px) {

   }
  

